force-app/main/default/objects/Egg_Cycle_Event__c/Egg_Cycle_Event__c.object-meta.xml
<CustomObject>
    <label>Egg Cycle Event</label>
    <nameField>
        <displayFormat>ECV {00000}</displayFormat>
        <label>Egg Cycle Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Egg Cycle Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>