force-app/main/default/objects/Egg_Cycle_Event__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <label>Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Egg Cycle Events</relationshipLabel>
    <relationshipName>Egg_Cycle_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>