force-app/main/default/objects/Egg_Cycle_Event__c/fields/Egg__c.field-meta.xml
<CustomField>
    <fullName>Egg__c</fullName>
    <label>Egg</label>
    <referenceTo>Egg__c</referenceTo>
    <relationshipLabel>Egg Cycle Events</relationshipLabel>
    <relationshipName>Egg_Cycle_Events</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>