force-app/main/default/objects/Egg_Cycle_Event__c/fields/Fate__c.field-meta.xml
<CustomField>
    <fullName>Fate__c</fullName>
    <formula>TEXT(Egg__r.Fate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fate</label>
    <type>Text</type>
</CustomField>